[tool.poetry]
name = "olive-garden-auth"
version = "0.1.0"
description = ""
authors = ["murtazox04 <murtazox04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
piccolo = {extras = ["postgres"], version = "^1.5.0"}
uvicorn = "^0.29.0"
piccolo-api = "^1.4.0"
eskiz-sms = "^0.2.3"
faststream = {extras = ["kafka"], version = "^0.5.5"}
passlib = "^1.7.4"
pytz = "^2024.1"
python-jose = "^3.3.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
